--- a/RD3/Views/UserView.xaml
+++ b/RD3/Views/UserView.xaml
@@ -14,7 +14,7 @@
     Width="920"
     Height="645"
     d:DataContext="{d:DesignInstance Type=viewmodels:UserViewModel}"
-    Background="#FDFDFD"
+    Background="{StaticResource BackGroundBrush}"
     mc:Ignorable="d">
     <prism:Dialog.WindowStyle>
         <Style TargetType="Window">
@@ -29,7 +29,7 @@
             <Setter Property="AllowsTransparency" Value="True" />
             <Setter Property="WindowStyle" Value="None" />
             <Setter Property="WindowState" Value="{Binding FormState, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-            <Setter Property="Background" Value="#F8F9F9" />
+            <Setter Property="Background" Value="{StaticResource BackGroundBrush}" />
             <Setter Property="Opacity" Value="1" />
         </Style>
     </prism:Dialog.WindowStyle>
