--- a/RD3/Views/CommunicationView.xaml
+++ b/RD3/Views/CommunicationView.xaml
@@ -35,7 +35,7 @@
             <Setter Property="AllowsTransparency" Value="True" />
             <Setter Property="WindowStyle" Value="None" />
             <Setter Property="WindowState" Value="{Binding FormState, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-            <Setter Property="Background" Value="Transparent" />
+            <Setter Property="Background" Value="{StaticResource BackGroundBrush}" />
             <Setter Property="Effect" Value="{StaticResource EffectShadow1}" />
         </Style>
     </prism:Dialog.WindowStyle>
